[IRONWOOD-63] fix select field on mobile devices

--- a/lms/static/sass/partials/lms/theme/blocks/_form-elements.scss
+++ b/lms/static/sass/partials/lms/theme/blocks/_form-elements.scss
@@ -15,6 +15,18 @@ select:not(.forum-nav-filter-main-control):not(.forum-nav-sort-control):not(.for
     padding: 0 30px 0 10px !important;
     max-width: 100%;
 
+    .problem & {
+        font-size: 16px;
+        padding: 10px 30px 10px 10px !important;
+        height: auto;
+        border: 2px solid #e4e4e4 !important;
+        border-radius: 3px;
+
+        .rtl & {
+            padding: 10px 10px 10px 30px !important;
+        }
+    }
+
     &::-ms-expand {
         display: none;
     }
